# up

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backtest/: MOVED.md
config/fees/: default.yaml
config/strategy_params/: cn_etf_rot_v1.yaml
config/universe/: etf_pool.yaml
docs/: WORK_PLAN.md  backtest_rules.md  data_contract.md  deep-research-report.md  engineering_rules.md  error_correction.md  phase1_etf_rotation_design.md  phase_summary.md  research_questions.md  roadmap.md  strategy_archive.md  task_queue.md
execution/: MOVED.md
factors/: MOVED.md
portfolio/: MOVED.md
scripts/: __init__.py  build_backtest_web_report.py  fetch_akshare.py  run_tests.py  snapshot.py  synthetic_raw_sample.py
src/backtest/: __init__.py  engine.py  market_rules_cn.py  market_rules_us.py  walk_forward.py
src/data/: __init__.py  akshare_adapter.py  akshare_fetcher.py  etf_loader.py  reference.py  schema.py  snapshot.py
src/execution/: __init__.py  fee_model.py  order_model.py  slippage.py  tradeability.py
src/factors/: __init__.py  dividend.py  liquidity.py  low_vol.py  momentum.py  volatility.py
src/portfolio/: __init__.py  capacity.py  optimizer.py  risk_budget.py
src/reports/: __init__.py  backtest_report.py
src/review/: __init__.py
src/risk/: __init__.py
src/strategies/: __init__.py
strategies/: MOVED.md
tests/: README.md  _pytest_compat.py  conftest.py
tests/lookahead/: test_fundamental_release_lag_enforced.py  test_momentum_lookahead.py  test_no_future_prices_in_signal.py  test_volatility_lookahead.py
(+53 files in other folders)
